fixed startpage margins and fixed loading alignment

--- a/app/components/public/CharacterListPage/CharacterListPage.css
+++ b/app/components/public/CharacterListPage/CharacterListPage.css
@@ -1,8 +1,3 @@
-.center {
-  width: 100%;
-  text-align: center;
-}
-
 .inputbar.row {
     margin: 80px 0;
 }
